<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="prefAutoBackup"
        android:summary="@string/prefAutoBackupSummary"
        android:title="@string/prefAutoBackupTitle" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="prefAutoBackupDropBox"
        android:summary="@string/prefAutoBackupDropBoxSummary"
        android:title="@string/prefAutoBackupDropBoxTitle" />

    <Preference
        android:key="prefLinkDropBox"
        android:summary="@string/prefLinkDropBoxSummary"
        android:title="@string/prefLinkDropBoxTitle" />
    <Preference
        android:key="prefBackup"
        android:summary="@string/prefBackupSummary"
        android:title="@string/prefBackupTitle" />
    <Preference
        android:key="prefRestore"
        android:summary="@string/prefRestoreSummary"
        android:title="@string/prefRestoreTitle" />
    <Preference
        android:key="prefEmailDb"
        android:summary="@string/prefEmailDbSummary"
        android:title="@string/prefEmailDbTitle" />
    <Preference
        android:key="prefDeleteAll"
        android:summary="@string/prefDeleteAllSummary"
        android:title="@string/prefDeleteAllTitle" />

</PreferenceScreen>