<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <Button
        android:id="@+id/btnCancel"
        style="@style/buttonBlue"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnCancel" >
    </Button>

    <Button
        android:id="@+id/btnDelete"
        style="@style/buttonGreen"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnDelete"
        android:visibility="gone" >
    </Button>

    <Button
        android:id="@+id/btnSave"
        style="@style/buttonRed"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnSave" >
    </Button>

</merge>